# autosetup

./: .gitignore  LICENSE  Makefile  README  README.md  TODO  autosetup  autosetup-find-tclsh  feed.xml  find-tclsh  index.html  jimsh0.c  migrate-autoconf  sys-find-tclsh  test-tclsh
articles/: index.html
articles/2010-12-14/: index.html
articles/2011-05-05/: index.html
articles/autoconf-migration/: index.html
articles/autosetup-062/: index.html
articles/autosetup-069/: index.html
articles/autosetup-070/: index.html
articles/autosetup-071/: index.html
articles/fossil-adopts-autosetup/: index.html
articles/handling-cflags/: index.html
articles/msys-mingw-support/: index.html
css/: sh_style.css  style.css
developer/: index.html
developer/advanced/: index.html
developer/autoconf/: index.html
developer/examples/: index.html
developer/modules/: index.html
developer/reference/: index.html
developer/sysinstall/: index.html
developer/tcl/: index.html
download/: index.html
examples/conditional-include/: Makefile.in  auto.def  sub.make
examples/dropbear/: Makefile.in  README.autosetup  auto.def  configure.in
examples/iftop/: README.autosetup  auto.def  (+1 more)
examples/migration/tinytcl/: Makefile.in  auto.def.edited  configure.ac
faq/: index.html
javascript/: sh_lang.js
lib/: README.autosetup-lib  asciidoc-formatting.tcl  cc-shared.tcl  cc.tcl  formatting.tcl  getopt.tcl  help.tcl  init.tcl  install.tcl  markdown-formatting.tcl  misc.tcl  pkg-config.tcl  system.tcl  text-formatting.tcl  util.tcl  wiki-formatting.tcl
license/: index.html
news/: index.html
testsuite/: Makefile  auto.def  configure  tcltest.tcl  template-a.in  template-a.inc  template-a1.inc  template-a2.inc
user/: index.html
usermanual/: index.html
why/: index.html
(+48 files in other folders)
